# MANTruckScenesReader

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
core/: CMakeLists.txt  Diagram.drawio  README.md
core/MANTruckDataset/: CMakeLists.txt
core/cmake/: Config.cmake.in
core/include/MANTruckDataset/: Calibration.hpp  DataSample.hpp  Lidar.hpp  MANTruckDataset.hpp  PointClouds.hpp  Sample.hpp  SamplesManager.hpp  Scene.hpp  Sensor.hpp  SensorsManager.hpp  data_utils.hpp  utils.hpp
core/python/: CMakeLists.txt  pyproject.toml
core/python/src/: dataset_bindings.cpp  py_bindings.cpp  sample_bindings.cpp  scene_bindings.cpp  sensor_bindings.cpp  utils_bindings.cpp
core/python/stubs/: MANTruckDatasetPy.pyi
core/src/: Calibration.cpp  DataSample.cpp  MANTruckDataset.cpp  MANTruckDataset.pyi  Sample.cpp  Scene.cpp  Sensor.cpp  pyBind.cpp
core/src/MANTruckDataset/: MANTruckDataset.cpp
core/test/: CMakeLists.txt
core/test/src/: samples.cpp
examples/: CMakeLists.txt
examples/cpp/: CMakeLists.txt
examples/cpp/include/: utils.hpp
examples/cpp/src/: data_parsing.cpp  data_samples.cpp  man_dataset.cpp
examples/include/: utils.hpp
examples/py/src/: dataset.py  samples.py  scenes.py  sensors.py  utils.py
examples/src/: data_parsing.cpp  data_samples.cpp  example.cpp  man_dataset.cpp  samples.cpp  scenes.cpp  sensors.cpp
